# cstrike15

./: .gitignore  CMakeLists.txt  CleanupVPC.py  GenerateSoluionCMake.bat  README.md  VPCCreateSolution.bat  build_csgo_automated  builds with msvc2017.txt  createcsgo  vpc_fix.reg
appframework/: CMakeLists.txt
appframework/_vpc_/manifest_appframework/win32/: manifest.txt
avi/: CMakeLists.txt
avi/_vpc_/manifest_valve_avi/win32/: manifest.txt
bitmap/: CMakeLists.txt
bitmap/_vpc_/manifest_bitmap/win32/: manifest.txt
bitmap/_vpc_/manifest_bitmap_byteswap/win32/: manifest.txt
bonesetup/: CMakeLists.txt
bonesetup/_vpc_/manifest_bonesetup/win32/: manifest.txt
choreoobjects/_vpc_/manifest_choreoobjects/win32/: manifest.txt
cmake/: detect_platform.cmake  game_detect.cmake  platform_dirs.cmake  protobuf_builder.cmake  source_dll_base.cmake  source_dll_windows_base.cmake  source_exe_base.cmake  source_exe_windows_base.cmake  source_lib_base.cmake  source_lib_windows_base.cmake  source_video_base.cmake  source_windows_base.cmake  vpc.cmake
common/: SteamAppStartup.cpp  SteamAppStartup.h
datacache/: mdlcache.cpp
datacache/_vpc_/manifest_datacache/win32/: manifest.txt
datamodel/_vpc_/manifest_datamodel/win32/: manifest.txt
dedicated/: CMakeLists.txt
dedicated/_vpc_/manifest_dedicated/win32/: manifest.txt
dedicated_main/: main.cpp
dedicated_main/_vpc_/manifest_dedicated_main/win32/: manifest.txt
dmserializers/_vpc_/manifest_dmserializers/win32/: manifest.txt
dmxloader/_vpc_/manifest_dmxloader/win32/: manifest.txt
dx9sdk/: CMakeLists.txt
dx9sdk/include/: ksmedia.h
engine/: CMakeLists.txt  client.cpp  engine_inc.cmake  gl_lightmap.cpp  gl_matsysiface.cpp  gl_model_private.h  modelloader.h  net_ws.cpp  staticpropmgr.cpp
engine/audio/private/: audio_pch.h
engine_ds/: engine_ds.vpc
engine_ds/_vpc_/manifest_engine_ds/win32/: manifest.txt
fgdlib/_vpc_/manifest_fgdlib/win32/: manifest.txt
filesystem/: filesystem_stdio.cpp
filesystem/_vpc_/manifest_filesystem_stdio/win32/: manifest.txt
fow/: fow_radiusoccluder.cpp  fow_radiusoccluder.h
fow/_vpc_/manifest_fow/win32/: manifest.txt
game/: CMakeLists.txt
game/client/: CMakeLists.txt  c_basecombatcharacter.h  cdll_client_int.cpp  client_base.cmake  client_base.vpc  clientmode.h  clientmode_shared.cpp  iconsole.h  particlemgr.h  vscript_client.cpp
game/client/cstrike15/: c_cs_player.cpp  clientmode_csnormal.cpp  clientmode_csnormal.h  cs_client_gamestats.cpp
game/client/cstrike15/Scaleform/: loadingscreen_scaleform.cpp  options_scaleform.cpp  options_scaleform.h
game/client/cstrike15/gameui/: BasePanel.cpp  basepanel.h  gameconsole.cpp  gameconsole.h  gameconsoledialog.cpp  gameconsoledialog.h  gameui_interface.cpp  gameui_interface.h  optionssubgame.cpp
game/client/game_controls/: baseviewport.cpp  buymenu.h
game/server/: BaseAnimatingOverlay.h  CMakeLists.txt  ai_component.h  ai_movesolver.cpp  ai_utils.h  basecombatcharacter.h  baseentity.cpp  player.cpp
game/server/cstrike15/: cs_autobuy.h  cs_player.cpp  cs_player.h
game/server/cstrike15/bot/: cs_bot.cpp  cs_bot.h  cs_bot_vision.cpp
game/shared/: basecombatcharacter_shared.cpp  basecombatweapon_shared.cpp  basecombatweapon_shared.h  bone_merge_cache.h  predictioncopy.h  shared_classnames.h  viewport_panel_names.h  weapon_parse.cpp
game/shared/cstrike15/: achievements_cs.cpp  cs_player_shared.cpp  cstrike15_item_constants.h  gametypes.h  weapon_csbase.cpp  weapon_csbasegun.cpp  weapon_m3.cpp  weapon_nova.cpp
game/shared/econ/: econ_item_system.cpp  econ_item_view.cpp  econ_item_view.h  localization_provider.h
game/shared/hl2/: hl_movedata.h
hammer/: hammer.cpp
hammer/_vpc_/manifest_hammer_dll/win32/: manifest.txt
hammer_launcher/: main.cpp
hammer_launcher/_vpc_/manifest_hammer_launcher/win32/: manifest.txt
inputsystem/_vpc_/manifest_inputsystem/win32/: manifest.txt
interfaces/_vpc_/manifest_interfaces/win32/: manifest.txt
launcher/_vpc_/manifest_launcher/win32/: manifest.txt
launcher_main/_vpc_/manifest_launcher_main/win32/: manifest.txt
localize/_vpc_/manifest_localize/win32/: manifest.txt
matchmaking/_vpc_/manifest_matchmaking_csgo/win32/: manifest.txt
matchmaking/_vpc_/manifest_matchmakingbase/win32/: manifest.txt
matchmaking/_vpc_/manifest_matchmakingbase_ds/win32/: manifest.txt
materialobjects/_vpc_/manifest_materialobjects/win32/: manifest.txt
materialsystem/_vpc_/manifest_materialsystem/win32/: manifest.txt
mathlib/_vpc_/manifest_mathlib/win32/: manifest.txt
mathlib/_vpc_/manifest_mathlib_extended/win32/: manifest.txt
mdllib/_vpc_/manifest_mdllib/win32/: manifest.txt
mdlobjects/_vpc_/manifest_mdlobjects/win32/: manifest.txt
meshutils/_vpc_/manifest_meshutils/win32/: manifest.txt
movieobjects/_vpc_/manifest_movieobjects/win32/: manifest.txt
particles/_vpc_/manifest_particles/win32/: manifest.txt
public/appframework/: IAppSystemGroup.h
public/bitmap/: imageformat_declarations.h
public/tier0/: basetypes.h  ia32detect.h  memdbgon.h  memoverride.cpp  platform.h  threadtools.h  threadtools.inl
public/tier1/: strtools.h
public/vgui/: KeyCode.h
raytrace/_vpc_/manifest_raytrace/win32/: manifest.txt
resourcefile/_vpc_/manifest_resourcefile/win32/: manifest.txt
scenefilecache/_vpc_/manifest_scenefilecache/win32/: manifest.txt
serverbrowser/: CustomGames.cpp
serverbrowser/_vpc_/manifest_serverbrowser/win32/: manifest.txt
soundemittersystem/_vpc_/manifest_soundemittersystem/win32/: manifest.txt
soundsystem/_vpc_/manifest_soundsystem/win32/: manifest.txt
studiorender/_vpc_/manifest_studiorender/win32/: manifest.txt
tier0/: cpu_posix.cpp  miniprofiler.cpp
tier0/_vpc_/manifest_tier0/win32/: manifest.txt
tier1/: convar.cpp  strtools.cpp
tier1/_vpc_/manifest_tier1/win32/: manifest.txt
tier2/_vpc_/manifest_tier2/win32/: manifest.txt
tier3/_vpc_/manifest_tier3/win32/: manifest.txt
vgui2/game_controls/: inputgameui.cpp
vgui2/src/: VGUI_Border.h
vguimatsurface/: vguimatsurface.vpc
vstdlib/: vstrtools.cpp
vtf/_vpc_/manifest_vtf/win32/: manifest.txt
(+41 files in other folders)
