cmake_minimum_required(VERSION 3.20)

project(cstrike15)

set(CMAKE_CXX_STANDARD 14)

# Set 32-bit flags only for non-MSVC compilers (GCC/Clang)
if(NOT MSVC)
    set(CMAKE_C_FLAGS "-m32")
    set(CMAKE_CXX_FLAGS "-m32")
    set(CMAKE_EXE_LINKER_FLAGS "-m32")
endif()

if(WIN32)
add_subdirectory(dx9sdk)
endif()

#this order of includes is taken from vpc.
add_subdirectory(appframework)
add_subdirectory(avi) # for valve_avi.vpc
add_subdirectory(bitmap) # bitmap_byteswap is inside bitmap directory
add_subdirectory(bonesetup)
add_subdirectory(choreoobjects)
add_subdirectory(datacache)
add_subdirectory(datamodel)
add_subdirectory(dedicated)
add_subdirectory(dedicated_main)
add_subdirectory(dmserializers)
add_subdirectory(dmxloader)
add_subdirectory(engine)
add_subdirectory(engine_ds)
add_subdirectory(fgdlib)
add_subdirectory(filesystem)
add_subdirectory(fow)
add_subdirectory(hammer) # hammer_dll.vpc
add_subdirectory(hammer_launcher)
add_subdirectory(inputsystem)
add_subdirectory(interfaces)
add_subdirectory(launcher)
add_subdirectory(launcher_main)
add_subdirectory(matchmaking)
add_subdirectory(materialobjects)
add_subdirectory(materialsystem)
add_subdirectory(mathlib)
add_subdirectory(mdllib)
add_subdirectory(mdlobjects)
add_subdirectory(meshutils)
add_subdirectory(movieobjects)
add_subdirectory(particles)
add_subdirectory(raytrace)
add_subdirectory(resourcefile)
add_subdirectory(responserules)
add_subdirectory(scenefilecache)
add_subdirectory(serverbrowser)
add_subdirectory(soundemittersystem)
add_subdirectory(soundsystem)
add_subdirectory(studiorender)
add_subdirectory(tier0)
add_subdirectory(tier1)
add_subdirectory(tier2)
add_subdirectory(tier3)
add_subdirectory(commedit)
add_subdirectory(unitlib)
add_subdirectory(localize)
add_subdirectory(vguimatsurface)
add_subdirectory(vscript)
add_subdirectory(vstdlib)
add_subdirectory(vtf)
add_subdirectory(vpklib)
add_subdirectory(videocfg)
